Fix: Last update caused an error at theme button fuction to set up the interfarce in dark mode, fix is provisional, we should look to a better way to extract info from the cookie. Minor update: Added <title>Already viewed</tile> to svg project check.

--- a/main.css
+++ b/main.css
@@ -1263,6 +1263,7 @@ textPath {
     height: 34px;
     left: 8px;
     top: 8px;
+    z-index: 9999;
 }
 .project-card__check--active{
     display:block;
